# TradesKill

./: .clang-format  CMakeLists.txt  README.md  animation.c  animation.h  assets.c  assets.h  atlas.c  atlas.h  game.c  game.h  globals.h  keyboard.c  keyboard.h  linmath.h  logger.h  main.c  mouse.c  mouse.h  queue.c  queue.h  renderer.c  renderer.h  scene.c  scene.h  shader.c  shader.h  sprite.c  sprite.h  state.c  state.h  stb_image.h  system.c  system.h  timer.c  timer.h  tskmath.h  utils.c  utils.h  vertex.c  (+3 more)
assets/ase/: dirt.aseprite  floors.aseprite  gem.aseprite  grass.aseprite  hero.aseprite  ore.ase  tree.aseprite
assets/pixaki/: ore.pixaki
assets/shaders/: default.v.shader
libmtwist/: mt.c  mtwist.h  mtwist_internal.h  seed.c
scenes/: scene_primary.c  scene_primary.h
scripts/: sync-assets.sh
sprites/: common.c  common.h  effect_bling.c  effect_bling.h  grass.c  grass.h  hero.c  hero.h  ore.h  ore_copper.c  ore_copper.h  ore_gold.c  ore_gold.h  tree.h
